# app/app-services/cmd/front_api/docs/swagger.json
@@ -18,20 +18,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Home"
                 ],
                 "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
-        "/login": {
+        "/api/auth/login": {
             "post": {
                 "description": "User Login",
                 "consumes": [
@@ -41,20 +34,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Users"
                 ],
                 "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "password",
+                        "in": "path",
+                        "required": true
                     }
-                }
+                ],
+                "responses": {}
             }
         },
-        "/logout": {
+        "/api/auth/logout": {
             "post": {
                 "description": "User Logout",
                 "consumes": [
@@ -64,43 +66,26 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Users"
                 ],
                 "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
-        "/me": {
+        "/api/auth/me": {
             "post": {
-                "description": "User Me",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "User",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Users"
                 ],
-                "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "summary": "show User",
+                "responses": {}
             }
         },
-        "/refresh": {
+        "/api/auth/refresh": {
             "post": {
                 "description": "User Refresh",
                 "consumes": [
@@ -110,20 +95,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Users"
                 ],
                 "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
-        "/register": {
+        "/api/auth/register": {
             "post": {
                 "description": "User Register",
                 "consumes": [
@@ -133,17 +111,10 @@
                     "application/json"
                 ],
                 "tags": [
-                    "example"
+                    "Users"
                 ],
                 "summary": "ping example",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
+                "responses": {}
             }
         }
     },
